[package]
name = "byte-style-encoder"
version = "0.1.1"
authors = ["ihciah <ihciah@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ihciah/byte-style-encoder"
description = "Byte Style Encoder"
keywords = ["bytestyle", "encoder"]

[dependencies]
nom = "6.2.1"
bitvec = "0.19"
thiserror = "1"
clap = "2.33"